--- a/to-do-list-project/package.json
+++ b/to-do-list-project/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage":"https://silpakopparthi.github.io/Group-VWJS-To-Do-List-Project",
+  "homepage": "https://silpakopparthi.github.io/Group-VWJS-To-Do-List-Project",
   "name": "to-do-list-project",
   "version": "0.1.0",
   "private": true,
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.24.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
